[package]
name = "app_version"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# built = { version = "=0.6.1", features = ["chrono", "git2", "semver"] }
anyhow = "=1.0.71"
chrono = "=0.4.26"
git2 = { version = "=0.17.2", default-features = false }

