[package]
name = "rtun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "=1.28.2", features = ["full"] }
tokio = { version = "=1.32.0", features = ["full"] }
tokio-util = {version = "=0.7.8", features = ["full"]}
tokio-stream = { version = "=0.1.14", features = ["sync"] }
tokio-rustls = "=0.24.1"
rustls = "=0.21.6"

futures="=0.3.28"
anyhow = "=1.0.71"
bytes = "=1.1.0"
clap = { version = "=4.1.6", features = ["derive", "env"] }
url = "=2.4.0"

tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
tracing-appender = "=0.2.2"
time = {version = "=0.3.21", features = ["formatting", "macros"]}

parking_lot = "=0.11.2"

pty-process = { version = "=0.4.0", features = ["async"] }
# pty-process = { path = "/Users/simon/simon/src/study/pty-process", features = ["async"] }

nix = { version = "0.26.2", default-features = false, features = ["signal", "fs", "term", "poll"] }
lazy_static = "=1.4.0"

crossterm = { version = "=0.27.0", features = ["event-stream", "events"] }
termwiz = "=0.20.0"
term_size = "=0.3.2"

async-process = "=1.7.0"

portable-pty = "=0.8.1"

tokio-pty-process = "=0.4.0"

# headers = "=0.3.8"
axum = {version = "=0.6.20", features = ["ws", "headers"]}
tower-http = {version = "=0.4.3", default-features = false, features = ["full"]}
reqwest = { version = "=0.11.20", features = ["json"] }
serde = { version = "=1.0.186", features = ["derive", "serde_derive"] }

protobuf = { version = "=3.2.0", features = ["with-bytes"] }
protobuf-json-mapping = "=3.2.0"
async-trait = "=0.1.73"
once_cell = "=1.18.0"
tokio-tungstenite = "=0.20.0"
pretty-hex = "=0.3.0"

# 试验性
# snafu = "=0.7.5"
# snafu = { version = "0.5", features = ["futures-01"] }


[build-dependencies]
# prost-build = { version = "=0.9.0" }
# protobuf-codegen-pure = "=2"
# protobuf-codegen = "=2.27.1"
protobuf-codegen = "=3.2.0"

