[package]
name = "rtun"
# version = "0.1.0"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "=1.28.2", features = ["full"] }
tokio = { version = "=1.32.0", features = ["full"] }
tokio-util = {version = "=0.7.8", features = ["full"]}
tokio-stream = { version = "=0.1.14", features = ["sync"] }
tokio-rustls = "=0.24.1"
rustls = "=0.21.6"
# rustls-pemfile = "=1.0.3"

futures="=0.3.28"
anyhow = "=1.0.71"
bytes = "=1.4.0"
clap = { version = "=4.1.6", features = ["derive", "env"] }
url = "=2.4.0"

tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
tracing-appender = "=0.2.2"
time = {version = "=0.3.21", features = ["formatting", "macros"]}

parking_lot = "=0.11.2"



nix = { version = "0.26.2", default-features = false, features = ["signal", "fs", "term", "poll"] }
lazy_static = "=1.4.0"

term_size = "=0.3.2"
crossterm = { version = "=0.27.0", features = ["event-stream", "events"] }

pty-process = { version = "=0.4.0" }
# pty-process = { path = "/Users/simon/simon/src/study/pty-process", features = ["async"] }

# termwiz = "=0.20.0"
# async-process = "=1.7.0"
# portable-pty = "=0.8.1"
# tokio-pty-process = "=0.4.0"

# headers = "=0.3.8"
axum = {version = "=0.6.20", features = ["ws"]}
axum-server = { version = "=0.5.1", features = ["tls-rustls"] }
tower-http = {version = "=0.4.3", default-features = false, features = ["full"]}
reqwest = { version = "=0.11.20", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "=0.20.0", features = ["rustls-tls-webpki-roots"] }


serde = { version = "=1.0.186", features = ["derive", "serde_derive"] }

protobuf = { version = "=3.2.0", features = ["with-bytes"] }
protobuf-json-mapping = "=3.2.0"
async-trait = "=0.1.73"
once_cell = "=1.18.0"
pretty-hex = "=0.3.0"

thiserror = "=1.0.47"
json5 = "=0.4.1"
shadowsocks = "=1.15.4"
shadowsocks-service = { version = "=1.15.4", features = ["local", "local-socks4"] }
byte_string = "=1.0.0"

hmac = "=0.12.1"
sha2 = "=0.10.7"
base64 = "=0.21.3"
chrono = "=0.4.26"

# 试验性
# snafu = "=0.7.5"
# snafu = { version = "0.5", features = ["futures-01"] }

tokio_kcp = "=0.9.6"
kcp = "=0.5.3"
yamux = "=0.12.0"
tokio-yamux = "=0.3.8"
stun_codec = "=0.3.2"
bytecodec = "=0.4.15"
rand = "=0.8.5"
# pin-project-lite = "=0.2.13"
webrtc-ice = "=0.9.1"
webrtc-util = "=0.7.0"
webrtc-dtls = "=0.7.2"
crc32c = "=0.6.4"

quinn = "=0.10.2"
quinn-proto = "=0.10.2"
rcgen = "=0.11.1"
if-watch = { version = "=3.0.1", features = ["tokio"] }
combine = "=4.6.6"
# webpki = "=0.22.1"

dialoguer = { version = "=0.10.4", features = ["history", "completion"] }
console = "=0.15.7"
indicatif = "=0.17.6"

indexmap = "=2.0.2"

[build-dependencies]
# prost-build = { version = "=0.9.0" }
# protobuf-codegen-pure = "=2"
# protobuf-codegen = "=2.27.1"
protobuf-codegen = "=3.2.0"
app_version ={ path = "../app_version" }
# app_version ={ path = "/Users/simon/simon/src/rtun/app_version" }
